--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>My Portfolio: Home</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>My Portfolio: Home</title>
+  </head>
+  <body>
     <div>
-        <a href="/home">HOME</a>
-        <a href="/about">ABOUT</a>
-        <a href="/contact">CONTACT</a>
-    </div><br>
-    <div>
-        <h1>Emmanuel Tosin Adebisi</h1>
-        <p>Full Stack Web developer / Software Engineer</p>
+      <a href="/">HOME</a>
+      <a href="/about">ABOUT</a>
+      <a href="/contact">CONTACT</a>
     </div>
-    
-</body>
+    <br />
+    <div>
+      <h1>Emmanuel Tosin Adebisi</h1>
+      <p>Full Stack Web developer / Software Engineer</p>
+    </div>
+  </body>
 </html>
